objects/User_Account_History__c.object
<CustomObject>
    <description>Object to track user accounts on a scheduled basis. Analytic snapshot reports export key field information for historical user account management and reporting</description>
    <label>User Account History</label>
    <nameField>
        <label>User Account History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Account Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Familty__c</fullName>
        <label>Job Familty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_function__c</fullName>
        <label>Sub-function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Name__c</fullName>
        <label>Snapshot Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Manager__c</fullName>
        <label>Direct Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_Not_Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Activating__c</fullName>
        <label>Reason for Activating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Snapshot_Running_User__c</fullName>
        <label>Snapshot Running User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Deactivating__c</fullName>
        <label>Reason for Deactivating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_User_Cannot_be_Deactivated__c</fullName>
        <label>Reason for User Cannot be Deactivated</label>
        <type>TextArea</type>
    </fields>
</CustomObject>